[package]
name = "flashmap"
version = "0.1.0"
authors = ["Cassy343"]
edition = "2021"

description = "A lock-free eventually consistent concurrent hash map."
repository = "https://github.com/Cassy343/flashmap"
license = "MIT"
readme = "README.md"

keywords = ["map", "concurrent", "hashamp"]
categories = ["concurrency", "data-structures"]

[dependencies]
num_cpus = "1"
slab = "0.4.7"

[dependencies.hashbrown]
version = "0.12.3"
default-features = false
features = ["inline-more"]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5.6", features = ["checkpoint"] }

[features]
default = []
nightly = []

[profile.loomtest]
inherits = "release"
debug = 2
debug-assertions = true
lto = "fat"
codegen-units = 1

[profile.loomtest-fast]
inherits = "loomtest"
debug = 0
debug-assertions = false
strip = "symbols"
panic = "abort"
